# Voice

./: README.md  pyproject.toml
axima_voice/: __init__.py  _build_backend.py  cli.py  continuity_engine.py  conversation_manager.py  emotion_engine.py  filter.py  meaning_parser.py  performance_graph.py  phase2.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py  phase8.py  phase9.py  phonemes.py  pipeline.py  playback_engine.py  prosody.py  runtime_chunks.py  runtime_engine.py  simple_synth.py  source.py  state_recovery.py  streaming_metrics.py  streaming_scheduler.py  synth.py  text_normalizer.py  voice_checks.py  voice_director.py  voice_identity.py  wav_io.py
tests/: test_phase0.py  test_phase10_playback_engine.py  test_phase10_runtime_integration.py  test_phase10_streaming.py  test_phase11_conversation.py  test_phase12_voice_identity.py  test_phase13_emotion_engine.py  test_phase1_audio.py  test_phase3_streaming.py  test_phase4_runtime.py  test_phase5_music.py  test_phase6_audio.py  test_phase7_realism.py  test_phase8_audio_control.py  test_phase8_real_audio_control.py  test_phase9_runtime.py  test_phase9_runtime_execution.py  test_phase9_runtime_stronger.py
